--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anish Tanwar - Portfolio</title>
+    <title>Anish Tanwar - Web App Developer</title>
     <!-- CSS FILE -->
     <link rel="stylesheet" href="style/style.css">
 </head>
