Create About Section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,9 +12,10 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
 </head>
+
 <body>
-     <!--================= HEADER =================-->
-     <header class="header" id="header">
+    <!--================= HEADER =================-->
+    <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo mobile_size-logo">
                 <img src="images/faveicon-anish.png" alt="">
@@ -25,9 +27,9 @@
                         <a href="#" class="nav__link active-link">
                             <i class="ri-home-4-line"></i> Home
                         </a>
-                        
+
                     </li>
-                    
+
                     <li class="nav__item">
                         <a href="#skills" class="nav__link">
                             <i class="ri-user-line"></i> About
@@ -99,7 +101,8 @@
                     Turning Idea's into Pixels <br>
                 </h1>
                 <h3 class="home__info-title">
-                    I have a strong interest in creating web applications, websites, and implementing responsive web design.
+                    I have a strong interest in creating web applications, websites, and implementing responsive web
+                    design.
                 </h3>
                 <div class="home__buttons">
                     <button>Get a Proposal</button>
@@ -112,7 +115,36 @@
             </div>
         </div>
     </main>
+
+    <!--================== ABOUT ==================-->
+    <section class="About__container">
+        <div class="about__container container grid">
+            <div class="about__left-box">
+                <img src="images/about-founder-image.png" alt="">
+            </div>
+
+            <div class="about__right-box">
+                <h1>About Me.</h1>
+                <h3>
+                    I'm Anish Tanwar, a passionate web developer. I love web development stems from its power to connect
+                    and innovate. As a newcomer, I'm dedicated to crafting user-friendly websites and continually
+                    growing in this dynamic field. Let's connect and explore the endless possibilities of the web
+                    together!
+                </h3>
+
+                <ul class="social__icons">
+                    <li><i class="ri-github-fill"></i></li>
+                    <li><i class="ri-linkedin-box-fill"></i></li>
+                    <li><i class="ri-instagram-fill"></i></li>
+                    <li><i class="ri-youtube-fill"></i></li>
+                </ul>
+
+                <button class="hire__me">Hire me <span><i class="ri-arrow-right-line"></i></span></button>
+            </div>
+        </div>
+    </section>
 </body>
 <!-- SCRIPT FILE -->
 <script src="script/script.js"></script>
+
 </html>
