Set the Container Padding

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </header>
 
     <!--================== MAIN ==================-->
-    <main class="main" id="#">
+    <main class="main section" id="#">
         <div class="home___container container grid">
             <div class="home__left-box">
                 <div class="home__line"></div>
@@ -116,7 +116,7 @@
     </main>
 
     <!--================== ABOUT ==================-->
-    <section class="About__container" id="about">
+    <section class="About__container section" id="about">
         <div class="about__container container grid">
             <div class="about__left-box">
                 <img src="images/about-founder-image.png" alt="">
@@ -144,7 +144,7 @@
     </section>
 
     <!--================== ABOUT ==================-->
-    <section class="Skills__container" id="skills">
+    <section class="Skills__container section" id="skills">
         <div class="skills__container container grid">
             <div class="skill__left-box">
                 <h3>Favorite <span>Skills</span></h3>
