--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     </header>
 
     <!--================== MAIN ==================-->
-    <main class="main section" id="#">
+    <main class="main " id="#">
         <div class="home___container container grid">
             <div class="home__left-box">
                 <div class="home__line"></div>
