Add Portfolio Section

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             </div>
 
             <div class="about__right-box">
-                <h1>About Me.</h1>
+                <h1>About Me<span>.</span></h1>
                 <h3>
                     I'm Anish Tanwar, an enthusiastic web developer driven by the incredible potential of web
                     development to foster connections and drive innovation. As a newcomer in this dynamic field, my
@@ -143,12 +143,12 @@
         </div>
     </section>
 
-    <!--================== ABOUT ==================-->
+    <!--================== SKILLS ==================-->
     <section class="Skills__container section" id="skills">
         <div class="skills__container container grid">
             <div class="skill__left-box">
                 <h3>Favorite <span>Skills</span></h3>
-                <h1>My Skills</h1>
+                <h1>My Skills<span>.</span></h1>
                 <p>See fully what skills I have and perform, to develop the projects for you.</p>
                 <div class="skill__tab">
                     <ul>
@@ -345,6 +345,72 @@
 
         </div>
     </section>
+
+     <!--================== PROJECTS ==================-->
+     <section class="Project__container section" id="projects">
+        <div class="project__container grid">
+            <h1>Portfolio<span>.</span></h1>
+
+            <div class="project__main">
+                <div class="project__card">
+                    <img src="images/portfolio/1.png" alt="">
+                        <div class="cover_icon">
+                            <i class="ri-links-line"></i>
+                        </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/2.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/3.png" alt="">
+                    <div class="cover_icon">
+                            <i class="ri-links-line"></i>
+                        </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/1.png" alt="">
+                    <div class="cover_icon">
+                            <i class="ri-links-line"></i>
+                        </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/2.png" alt="">
+                    <div class="cover_icon">
+                            <i class="ri-links-line"></i>
+                        </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/3.png" alt="">
+                    <div class="cover_icon">
+                            <i class="ri-links-line"></i>
+                        </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/1.png" alt="">
+                    <div class="cover_icon">
+                            <i class="ri-links-line"></i>
+                        </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/3.png" alt="">
+                    <div class="cover_icon">
+                            <i class="ri-links-line"></i>
+                        </div>
+                </div>
+            </div>
+        </div>
+     </section>
+
 </body>
 <!-- SCRIPT FILE -->
 <script src="script/script.js"></script>
