Update Portfolio Section

--- a/index.html
+++ b/index.html
@@ -346,10 +346,18 @@
         </div>
     </section>
 
-     <!--================== PROJECTS ==================-->
-     <section class="Project__container section" id="projects">
+    <!--================== PROJECTS ==================-->
+    <section class="Project__container section" id="projects">
         <div class="project__container grid">
-            <h1>Portfolio<span>.</span></h1>
+            <h2>OUR PORTFOLIO</h2>
+            <h1>A Collection Of Our Latest Work</h1>
+
+            <div class="project__buttons">
+                <button class="active">All</button>
+                <button>Web Apps</button>
+                <button>Websites</button>
+            </div>
+
 
             <div class="project__main">
                 <div class="project__card">
@@ -409,8 +417,20 @@
                 </div>
             </div>
         </div>
-     </section>
+    </section>
 
+     <!--================== PROJECTS ==================-->
+    <section class="Qualification__container section" id="projects">
+        <div class="qualification__container container grid">
+            <div class="q__left-box">
+
+            </div>
+
+            <div class="q__right-box">
+
+            </div>
+        </div>
+    </section>
 </body>
 <!-- SCRIPT FILE -->
 <script src="script/script.js"></script>
