Add Working of Projects Section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
                     <li class="nav__item">
                         <a href="#projects" class="nav__link">
-                            <i class="ri-gallery-line"></i> Projects
+                            <i class="ri-gallery-line"></i> Portfolio
                         </a>
                     </li>
 
@@ -356,63 +356,182 @@
             <h1>A Collection Of Our Latest Work</h1>
 
             <div class="project__buttons">
-                <button class="active">All</button>
-                <button>Web Apps</button>
-                <button>Websites</button>
+                <button class="Pbutton active" Data-Filter="all">All</button>
+                <button class="Pbutton" Data-Filter="web-app">Web Apps</button>
+                <button class="Pbutton" Data-Filter="website">Websites</button>
             </div>
 
-            <div class="project__main">
+            <!-- ALL -->
+            <div class="project__main" Data-Item="all" Data-Default="true">
                 <div class="project__card">
-                    <img src="images/portfolio/1.png" alt="">
+                    <img src="images/portfolio/all/webapp-1.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
                 <div class="project__card">
-                    <img src="images/portfolio/2.png" alt="">
+                    <img src="images/portfolio/all/webapp-2.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
                 <div class="project__card">
-                    <img src="images/portfolio/3.png" alt="">
+                    <img src="images/portfolio/all/order-page.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
                 <div class="project__card">
-                    <img src="images/portfolio/1.png" alt="">
+                    <img src="images/portfolio/all/website-1.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
                 <div class="project__card">
-                    <img src="images/portfolio/2.png" alt="">
+                    <img src="images/portfolio/all/website-2.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
                 <div class="project__card">
-                    <img src="images/portfolio/3.png" alt="">
+                    <img src="images/portfolio/all/webapp-3.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
                 <div class="project__card">
-                    <img src="images/portfolio/1.png" alt="">
+                    <img src="images/portfolio/all/website-3.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
                 </div>
 
                 <div class="project__card">
-                    <img src="images/portfolio/3.png" alt="">
+                    <img src="images/portfolio/all/webapp-4.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+            </div>
+
+            <!-- WEB APP -->
+            <div class="project__main" Data-Item="web-app">
+                <div class="project__card">
+                    <img src="images/portfolio/web-app/webapp-1.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/web-app/webapp-2.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/web-app/webapp-3.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/web-app/webapp-4.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/web-app/webapp-5.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/webapp-3.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/website-3.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/nobisfashion.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+            </div>
+
+            <!-- WEBSITE -->
+            <div class="project__main" Data-Item="website">
+                <div class="project__card">
+                    <img src="images/portfolio/website/website-1.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/website/p-website-5.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/website/website-2.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/website/website-3.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/website/p-website-4.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/webapp-3.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/website-3.png" alt="">
+                    <div class="cover_icon">
+                        <i class="ri-links-line"></i>
+                    </div>
+                </div>
+
+                <div class="project__card">
+                    <img src="images/portfolio/nobisfashion.png" alt="">
                     <div class="cover_icon">
                         <i class="ri-links-line"></i>
                     </div>
